feat: add update user endpoint
